--- a/index.html
+++ b/index.html
@@ -96,6 +96,13 @@
             <p>I can do "reverse-engineering" too. Which includes Modding the games (Unity), Decompilation etc..</p>
           </div>
         </div>
+         <div class="card">
+          <div class="box">
+            <i class="fas fa-gamepad"></i>
+            <div class="text">Prototype and MVP Development</div>
+            <p>Rapidly prototyping MVPs to validate mobile game concepts, allowing for quick iteration and feedback gathering before full-scale development.</p>
+          </div>
+        </div>
       </div>
       
     </div>
