--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
           </div>
         </a>
-        <a href="BubblePop.html">
+        <a href="https://www.youtube.com/watch?v=NV-6sMkHTtU&ab_channel=AsifMushtaq">
           <div class="card">
             <div class="box">
               <img src="./assets/project3.png" alt="my-tasks">
