--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="https://github.com/asifmushtaq8"><i class="fab fa-github"></i></a></li>
-        <li><a href="https://www.linkedin.com/in/asif-mushtaq-49355618a/"><i class="fab fa-linkedin"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/asifgamedev"><i class="fab fa-linkedin"></i></a></li>
       </ul>
       <div class="menu-btn">
         <i class="fas fa-bars"></i>
